--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "keywords": [],
   "author": "Andy Wright <atwright147@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "types-for-adobe": "^7.0.4"
+    "types-for-adobe": "^7.0.5",
+    "typescript": "^4.7.4"
   }
 }
